--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,8 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts",
-    "next-env.d.ts", "**/*.ts", "**/*.tsx", "src/types/**/*.d.ts"
+    "next-env.d.ts", "**/*.ts", "**/*.tsx", "src/types/**/*.d.ts",
+    "src/app/**/*.tsx"
   ],
   "exclude": ["node_modules"]
 }
