--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "next": "16.1.4",
+    "next-auth": "5.0.0-beta.30",
     "pg": "^8.17.2",
     "postgres": "^3.4.8",
     "react": "19.2.3",
