--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
+    "jose": "^6.1.3",
     "next": "16.1.4",
     "next-auth": "5.0.0-beta.30",
     "pg": "^8.17.2",
